src/objects/UGI_Process__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Operational &amp; Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk</label>
        <referenceTo>UGI_Risk__c</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>UGI Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <recordTypes>
        <fullName>IA</fullName>
        <active>true</active>
        <label>IA</label>
    </recordTypes>
    <recordTypes>
        <fullName>SOX</fullName>
        <active>true</active>
        <label>SOX</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>